--- a/20250703_norwegia.html
+++ b/20250703_norwegia.html
@@ -177,7 +177,7 @@ li {
   </header>
 
   <main>
-<section id="onorwegii" style="display: none;">
+<section id="onorwegii">
   <h2>O Norwegii</h2>
 
   <h3>🇳🇴 Norwegia – Informacje ogólne</h3>
@@ -334,7 +334,7 @@ Zacumowanie. Przejazd wzdłuż zachodniego wybrzeża Szwecji do granicy z Norweg
       </ul>
     </section>
 
-    <section id="dzis">
+    <section id="dzis" style="display: none;">
       <h2>Dziś</h2>
       <div id="dzien"></div>
       <div id="ciekawostkaDnia"></div>
