--- a/20250703_norwegia.html
+++ b/20250703_norwegia.html
@@ -289,7 +289,7 @@ li {
     <section id="ciekawostki" style="display: none;">
       <h2>💡 Ciekawostki o Norwegii</h2>
       <ul>
-  <li>Norwegia ma ponad 1 100 fiordów – to jeden z najbardziej fiordowych krajów świata.</li>
+  <li>Fiord to wąska, głęboka zatoka morska o stromych brzegach, powstała przez zalanie doliny polodowcowej. Norwegia słynie z fiordów – ma ich ponad 1 100, a wiele z nich sięga dziesiątek kilometrów w głąb lądu!</li>
   <li>W północnej Norwegii można zobaczyć zorzę polarną nawet przez 8 miesięcy w roku, a latem słońce nie zachodzi – to zjawisko „słońca o północy”.</li>
   <li>Język norweski występuje w dwóch wersjach: bokmål i nynorsk.</li>
   <li>Laerdal to najdłuższy tunel drogowy na świecie – ma 24,5 km długości.</li>
@@ -303,6 +303,9 @@ li {
   <li>Można tam spotkać łosie spacerujące po osiedlach!</li>
   <li>Norwegia regularnie zajmuje wysokie miejsca w rankingach jakości życia, edukacji, wolności i szczęścia.</li>
   <li>Norwegowie piją jedną z największych ilości kawy na świecie.</li>
+<li>W Norwegii zawód nauczyciela jest jednym z najbardziej szanowanych w społeczeństwie – traktowany jest podobnie jak zawody lekarza czy prawnika.</li>
+<li>Aby zostać nauczycielem w Norwegii, trzeba ukończyć pięcioletnie studia magisterskie – obejmujące zarówno przedmiot, jak i pedagogikę.</li>
+<li>Nauczyciele w Norwegii mają dużą autonomię – sami wybierają metody nauczania, a ich relacje z uczniami są partnerskie i oparte na wzajemnym zaufaniu.</li>
 </ul>
     </section>
 
