--- a/20250703_norwegia.html
+++ b/20250703_norwegia.html
@@ -194,6 +194,7 @@ li {
   <li><strong>Największy wodospad:</strong> Vinnufossen (865 m wysokości)</li>
   <li><strong>Największe miasto:</strong> Oslo (ponad 700 000 mieszkańców)</li>
   <li><strong>Najdłuższy tunel:</strong> Lærdalstunnelen (24,5 km)</li>
+<li><strong>Najdłuższy most:</strong> Hardangerbrua (1380 m)</li>
   <li><strong>Najwyższe pasmo górskie:</strong> Jotunheimen (szczyty powyżej 2400 m n.p.m.)</li>
   <li><strong>Największa wyspa:</strong> Hinnøya (2204 km²)</li>
   <li><strong>Najdłuższy fiord:</strong> Sognefjord (ponad 200 km długości)</li>
