--- a/20250703_norwegia.html
+++ b/20250703_norwegia.html
@@ -334,6 +334,7 @@ Zacumowanie. Przejazd wzdłuż zachodniego wybrzeża Szwecji do granicy z Norweg
       <h2>Dziś</h2>
       <div id="dzien"></div>
       <div id="ciekawostkaDnia"></div>
+      <div id="pogodaDnia"></div>
     </section>
   </main>
 
@@ -402,7 +403,7 @@ const pogodaDnia = [
 
     function updateDzis() {
       const dzienElement = document.getElementById("dzien");
-      const ciekawostkaElement = document.getElementById("ciekawostkiDnia");
+      const ciekawostkaElement = document.getElementById("ciekawostkaDnia");
       const pogodaElement = 
 document.getElementById("pogodaDnia");
 
