--- a/20250703_norwegia.html
+++ b/20250703_norwegia.html
@@ -379,19 +379,19 @@ Zacumowanie. Przejazd wzdłuż zachodniego wybrzeża Szwecji do granicy z Norweg
     ];
 
 const pogodaDnia = [
-      `Pogoda Świnoujście:
-<table><tr>
+      `<strong>Pogoda Świnoujście (05.07.2025):</strong>
+<table class="stadium-table"><thead><tr>
 <th>01:00</th><th>02:00</th><th>03:00</th><th>04:00</th><th>05:00</th><th>06:00</th><th>07:00</th><th>08:00</th><th>09:00</th><th>10:00</th><th>11:00</th><th>12:00</th><th>13:00</th><th>14:00</th><th>15:00</th><th>16:00</th><th>17:00</th><th>18:00</th><th>19:00</th><th>20:00</th><th>21:00</th><th>22:00</th><th>23:00</th><th>00:00</th>
-</tr><tr>
+</tr></thead><tbody><tr>
 <td>17°</td><td>17°</td><td>16°</td>
 <td>16°</td><td>16°</td><td>17°</td>
 <td>18°</td><td>19°</td><td>20°</td>
 <td>22°</td><td>23°</td><td>23°</td>
-<td>24°</td><td>23°</td><td>23°</td>
-<td>24°</td><td>24°</td><td>23°</td>
+<td>24°</td><td>23°</td><td>23°🌧️20%</td>
+<td>24°🌧️20%</td><td>24°</td><td>23°</td>
 <td>23°</td><td>22°</td><td>21°</td>
 <td>21°</td><td>18°</td><td>18°</td>
-</tr></table`,
+</tr></tbody></table`,
       `Pogoda Jutro`,
       `Norwegowie mają jedno z najwyższych HDI na świecie.`,
       `W Norwegii można podróżować koleją przez fiordy!`,
